--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aquinoaldair/placemex",
     "description": "Estados, Municipios y Localidades de México",
-    "license": "license",
+    "license": "MIT",
     "authors": [
         {
             "name": "Aldair Aquino",
